...
                                <constraint firstAttribute="trailing" secondItem="gLl-tW-WdW" secondAttribute="trailing" id="gZY-s3-eCr"/>
                                <constraint firstItem="gLl-tW-WdW" firstAttribute="top" secondItem="AI5-fC-wcC" secondAttribute="top" id="hDq-Sa-chG"/>
                                <constraint firstAttribute="bottom" secondItem="gLl-tW-WdW" secondAttribute="bottom" id="rfG-ET-X4G"/>
                                <constraint firstItem="gLl-tW-WdW" firstAttribute="leading" secondItem="AI5-fC-wcC" secondAttribute="leading" id="z5b-ro-rYU"/>
                            </constraints>
                        </view>
                        <barButtonItem key="rightBarButtonItem" image="customRefresh" id="IYN-ZA-4Ue">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="btnReloadTapped:" destination="BYZ-38-t0r" id="uKJ-EL-jHO"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
